Fix: fix lack of gap between cards for small width

--- a/nebula/static/scss/views/question.scss
+++ b/nebula/static/scss/views/question.scss
@@ -5,12 +5,14 @@
 @use "../abstracts/mixins" as *;
 
 .container-question-page {
+	display: grid;
 	@include mq(md) {
-		display: grid;
 		grid-template-columns: 3fr minmax(240px, 1fr);
 
 		gap: 1.5rem;
 	}
+
+	gap: 1.5rem;
 }
 
 .info-bar {
